--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ main, development ]
+    branches: [ main, development, nbest ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -21,20 +21,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build and push Docker images
-        if: github.ref == 'refs/heads/main'
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: asrnlbenchmark/asr-nl-benchmark
-          tags: latest
+      # - name: Build and push Docker images
+      #   if: github.ref == 'refs/heads/main'
+      #   uses: docker/build-push-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      #     repository: asrnlbenchmark/asr-nl-benchmark
+      #     tags: latest
           
-      - name: Build and push Docker images for development
-        if: github.ref == 'refs/heads/development'
-        uses: docker/build-push-action@v1
+      # - name: Build and push Docker images for development
+      #   if: github.ref == 'refs/heads/development'
+      #   uses: docker/build-push-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      #     repository: asrnlbenchmark/asr-nl-benchmark
+      #     tags: dev-latest
+
+      - name: Build and push Docker images for N-Best
+        if: github.ref == 'refs/heads/nbest'
+        uses: docker/build-push-action@v5
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: asrnlbenchmark/asr-nl-benchmark
-          tags: dev-latest
+          repository: greenw0lf/asr-nl-benchmark-nbest
+          tags: latest
